--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,12 +75,12 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
    /** principal **/
-   --ion-color-principal: #ffc000;
+   --ion-color-principal: #828282;
    --ion-color-principal-rgb: 244, 244, 244;
    --ion-color-principal-contrast: #FFFFFF;
    --ion-color-principal-contrast-rgb: 0, 0, 0;
-   --ion-color-principal-shade: #ffc000;
-   --ion-color-principal-tint: #ffc000;
+   --ion-color-principal-shade: #828282;
+   --ion-color-principal-tint: #828282;
     /** secundario **/
     --ion-color-secundario: #48bbff;
     --ion-color-secundario-rgb: 244, 244, 244;
