--- a/src/app/reportetransmater/reportetransmater.page.html
+++ b/src/app/reportetransmater/reportetransmater.page.html
@@ -14,8 +14,8 @@
 
 <ion-content>
   <ion-fab vertical="bottom" horizontal="start"  slot="fixed" *ngIf="mostrarinfos">
-    <ion-fab-button color="transparent" (click)="validarInfo()" >
-      <ion-icon  color="principal" name="arrow-forward-circle">
+    <ion-fab-button color="dark" (click)="validarInfo()" >
+      <ion-icon color="light"  name="arrow-forward-circle">
       </ion-icon>
     </ion-fab-button>
   </ion-fab>
