--- a/src/app/reportlist/reportlist.page.html
+++ b/src/app/reportlist/reportlist.page.html
@@ -28,8 +28,8 @@
     </ion-segment-button>
   </ion-segment>
   <ion-fab vertical="bottom" horizontal="start" slot="fixed" #fab>
-    <ion-fab-button color="transparent">
-      <ion-icon name="settings" color="principal"></ion-icon>
+    <ion-fab-button color="dark">
+      <ion-icon color="light" name="settings" color="principal"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="end">
       <ion-fab-button *ngIf="tipoEnviados=='enviados'" (click)="MostrarReporte()"><ion-icon name="document-text-outline" ></ion-icon></ion-fab-button>
