--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -2,7 +2,7 @@
   <ion-header color="principal">
     <ion-toolbar color="principal">
       <img src="assets/ICONOCIPAVI.svg" slot="start" style="width: 35px;height: 35px;"/>
-      <ion-title>CIPAVI +</ion-title>
+      <ion-title>BISO</ion-title>
       <ion-button color="principal" (click)="funcioncerrar()" slot="end">  <ion-icon name="close">
       </ion-icon>       
        </ion-button>
